# ShadowSegmentation

./: .gitignore  BasicQuad.cpp  BasicQuad.h  CMakeLists.txt  DilateQuad.cpp  DilateQuad.h  DirLitQuad.h  ParallelSceneRenderer.cpp  ParallelSceneRenderer.h  README.md  ScreenspaceQuad.cpp  ScreenspaceQuad.h  TextureQuad.h  main.cpp  mathdebug.cpp  mathdebug.h  shaders.cpp  shaders.h
gl/: RenderContext.cpp  RenderContext.h  RenderTexture.cpp  RenderTexture.h  shaders.cpp  shaders.h
overlays/: DilateQuad.h  DirLitQuad.cpp  PointLitQuad.cpp  PointLitQuad.h  ScreenspaceQuad.cpp  ScreenspaceQuad.h  TextureQuad.cpp
scene/: ParallelSceneRenderer.cpp  ParallelSceneRenderer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
